--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ crate-type = ["lib", "cdylib"]
 [dependencies]
 nom = {"git" = "https://github.com/Geal/nom", "branch" = "master"}
 wasm-bindgen = "^0.2"
+wee_alloc = "^0.2"
