feat: Add `block_name`+, `namespaced_block_name`, and `block_attributes`.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ authors = ["Ivan Enderlin <ivan.enderlin@hoa-project.net>"]
 crate-type = ["lib", "cdylib"]
 
 [dependencies]
-nom = {"git" = "https://github.com/Geal/nom", "branch" = "master"}
+nom = {"git" = "https://github.com/Geal/nom", "branch" = "master", "features" = [ "regexp", "regexp_macros" ]}
 wasm-bindgen = "^0.2"
 wee_alloc = "^0.2"
+regex = "^0.2"
+lazy_static = "^1.0"
+serde_json = "^1.0"
