feat(parser) Remove `regex`.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ authors = ["Ivan Enderlin <ivan.enderlin@hoa-project.net>"]
 crate-type = ["lib", "cdylib"]
 
 [dependencies]
-nom = {"git" = "https://github.com/Geal/nom", "branch" = "master", "features" = [ "regexp", "regexp_macros" ]}
+nom = {"git" = "https://github.com/Geal/nom", "branch" = "master"}
 wasm-bindgen = "^0.2"
 wee_alloc = "^0.2"
 regex = "^0.2"
