--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,12 @@ authors = ["Ivan Enderlin <ivan.enderlin@hoa-project.net>"]
 [lib]
 crate-type = ["lib", "cdylib"]
 
+[features]
+wasm = ["wasm-bindgen", "wee_alloc"]
+default = []
+
 [dependencies]
-nom = {"git" = "https://github.com/Geal/nom", "branch" = "master"}
-wasm-bindgen = "^0.2"
-wee_alloc = "^0.2"
-regex = "^0.2"
-lazy_static = "^1.0"
+nom = "4.0.0-beta2"
 serde_json = "^1.0"
+wasm-bindgen = { version = "^0.2", optional = true }
+wee_alloc = { version = "^0.2", optional = true }
