--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ wasm = ["wasm-bindgen", "wee_alloc"]
 default = []
 
 [dependencies]
-nom = { git = "https://github.com/Geal/nom", branch = "master", default-features = false, features = [ "alloc" ] }
+nom = { version = "4.0.0-beta2" }
 serde_json = "^1.0"
 wasm-bindgen = { version = "^0.2", optional = true }
 wee_alloc = { version = "^0.2", optional = true }
