--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ default = []
 
 [dependencies]
 nom = { version = "4.0.0-beta2" }
+serde = "^1.0"
+serde_derive = "^1.0"
 serde_json = "^1.0"
 wasm-bindgen = { version = "^0.2", optional = true }
 wee_alloc = { version = "^0.2", optional = true }
