--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ wasm = ["wasm-bindgen", "wee_alloc"]
 default = []
 
 [dependencies]
-nom = { version = "4.0.0-beta2" }
+nom = "4.0.0-beta2"
 serde = "^1.0"
 serde_derive = "^1.0"
 serde_json = "^1.0"
