feat(wasm) Try to remove `wasm-bindgen`.
The goal is twofold:

  1. Reduce WASM file size,
  2. Remove the last blocker for going `no_std`.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,9 @@ debug = false
 lto = true
 
 [features]
-wasm = ["wasm-bindgen", "wee_alloc"]
+wasm = ["wee_alloc"]
 default = []
 
 [dependencies]
 nom = "4.0.0-beta3"
-wasm-bindgen = { version = "^0.2", optional = true }
 wee_alloc = { git = "https://github.com/rustwasm/wee_alloc/", branch = "master", optional = true }
