feat(wasm) Go with `no_std`.
And it reduces the WASM file by 47Kb (uncompressed) or
14Kb (compressed).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,5 @@ wasm = ["wee_alloc"]
 default = []
 
 [dependencies]
-nom = "4.0.0-beta3"
+nom = { version = "4.0.0-beta3", default-features = false, features = ["alloc"] }
 wee_alloc = { git = "https://github.com/rustwasm/wee_alloc/", branch = "master", optional = true }
