doc(src) Add documentation, and `README.md`.
The `README.md` file is generated with `cargo-readme`.

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,5 @@
 /Cargo.lock
 /bindings/wasm/node_modules/
 /bindings/wasm/package-lock.json
-/bindings/wasm/parser.wasm
-/bindings/wasm/parser.wasm.gz
+/bindings/wasm/gutenberg_post_parser.wasm
+/bindings/wasm/gutenberg_post_parser.wasm.gz
