--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,15 @@
 [package]
 name = "gutenberg_post_parser"
-version = "0.3.0"
+version = "0.4.0"
 authors = ["Ivan Enderlin <ivan.enderlin@hoa-project.net>"]
 license = "BSD-3-Clause"
 readme = "./README.md"
 repository = "https://github.com/Hywan/gutenberg-parser-rs"
 build = "build.rs"
+
+[[bin]]
+name = "gutenberg-post-parser"
+path = "src/main.rs"
 
 [lib]
 name = "gutenberg_post_parser"
@@ -28,6 +32,7 @@ wee_alloc = { version = "0.4.0", optional = true }
 neon = { version = "0.1.22", optional = true }
 serde_json = { version = "1.0", optional = true }
 neon-serde = { version = "0.0.3", optional = true }
+clap = "^2.31.2"
 
 [build-dependencies]
 neon-build = { version = "0.1.22", optional = true }
