Add a "bin" cargo feature to enable the binary
This makes `clap` an optional dependency. I was seeing build issues where clap
was pulling `std` into wasm builds, and then the build would fail because of
conflicting lang item definitions.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ build = "build.rs"
 [[bin]]
 name = "gutenberg-post-parser"
 path = "src/main.rs"
+required-features = ["bin"]
 
 [lib]
 name = "gutenberg_post_parser"
@@ -25,6 +26,7 @@ opt-level = 3
 default = ["nodejs"] # Because of a strange behavior, `nodejs` must be in `default`. Use `just` to compile correctly.
 wasm = ["wee_alloc"]
 nodejs = ["neon", "neon-build", "serde_json", "neon-serde"]
+bin = ["clap"]
 
 [dependencies]
 nom = { version = "4.0.0-beta3", default-features = false, features = ["alloc"] }
@@ -32,7 +34,7 @@ wee_alloc = { version = "0.4.0", optional = true }
 neon = { version = "0.1.22", optional = true }
 serde_json = { version = "1.0", optional = true }
 neon-serde = { version = "0.0.3", optional = true }
-clap = "^2.31.2"
+clap = { version = "^2.31.2", optional = true }
 
 [build-dependencies]
 neon-build = { version = "0.1.22", optional = true }
