--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,10 +23,10 @@ lto = true
 opt-level = 3
 
 [features]
-default = ["nodejs"] # Because of a strange behavior, `nodejs` must be in `default`. Use `just` to compile correctly.
+default = ["nodejs"] # Because of a strange behavior, `nodejs` must be in `default`. Use `just --list` to compile correctly.
 wasm = ["wee_alloc"]
 nodejs = ["neon", "neon-build", "serde_json", "neon-serde"]
-bin = ["clap"]
+bin = ["failure", "clap"]
 
 [dependencies]
 nom = { version = "4.0.0-beta3", default-features = false, features = ["alloc"] }
@@ -34,6 +34,7 @@ wee_alloc = { version = "0.4.0", optional = true }
 neon = { version = "0.1.22", optional = true }
 serde_json = { version = "1.0", optional = true }
 neon-serde = { version = "0.0.3", optional = true }
+failure = { version = "0.1.1", optional = true }
 clap = { version = "^2.31.2", optional = true }
 
 [build-dependencies]
