--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /Cargo.lock
+/bindings/asmjs/gutenberg_post_parser.asm.js
 /bindings/c/gutenberg-post-parser
 /bindings/c/gutenberg_post_parser.h
 /bindings/nodejs/native/Cargo.lock
