--- a/cbindgen.toml
+++ b/cbindgen.toml
@@ -9,7 +9,7 @@ Run `just build-c` to rebuild it.
 
 */"""
 tab_width = 4
-language = "C++"
+language = "C"
 
 [export]
 exclude = ["root", "alloc", "dealloc"]
