chore(wasm) Ignore `.wasm.br`.

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,6 @@
 /bindings/nodejs/native/target/
 /bindings/wasm/gutenberg_post_parser.debug.wasm
 /bindings/wasm/gutenberg_post_parser.wasm
+/bindings/wasm/gutenberg_post_parser.wasm.br
 /bindings/wasm/gutenberg_post_parser.wasm.gz
 /target/
