--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 /Cargo.lock
 /bindings/asmjs/gutenberg_post_parser.asm.js
+/bindings/asmjs/gutenberg_post_parser.asm.js.br
+/bindings/asmjs/gutenberg_post_parser.asm.js.gz
 /bindings/c/gutenberg-post-parser
 /bindings/c/gutenberg_post_parser.h
 /bindings/nodejs/native/Cargo.lock
