--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
-/Cargo.lock
+Cargo.lock
 /bindings/asmjs/gutenberg_post_parser.asm.js
 /bindings/asmjs/gutenberg_post_parser.asm.js.br
 /bindings/asmjs/gutenberg_post_parser.asm.js.gz
 /bindings/c/gutenberg-post-parser
 /bindings/c/gutenberg_post_parser.h
-/bindings/nodejs/native/Cargo.lock
 /bindings/nodejs/native/artifacts.json
 /bindings/nodejs/native/index.node
 /bindings/nodejs/native/target/
