--- a/cargo/std/Cargo.toml
+++ b/cargo/std/Cargo.toml
@@ -5,7 +5,6 @@ authors = ["Ivan Enderlin <ivan.enderlin@hoa-project.net>"]
 license = "BSD-3-Clause"
 readme = "../../README.md"
 repository = "https://github.com/Hywan/gutenberg-parser-rs"
-build = "../../build.rs"
 
 [[bin]]
 name = "gutenberg-post-parser"
@@ -23,15 +22,12 @@ lto = true
 opt-level = 3
 
 [features]
-default = ["nodejs"] # Because of a strange behavior, `nodejs` must be in `default`. Use `just --list` to compile correctly.
-wasm = ["wee_alloc"]
-c = ["cbindgen"]
-nodejs = ["neon", "neon-build", "serde_json", "neon-serde"]
+#default = ["nodejs"] # Because of a strange behavior, `nodejs` must be in `default`. Use `just --list` to compile correctly.
+#nodejs = ["neon", "neon-build", "serde_json", "neon-serde"]
 bin = ["failure", "clap"]
 
 [dependencies]
 nom = { version = "4.0.0" }
-wee_alloc = { version = "0.4.1", optional = true }
 neon = { version = "0.1.23", optional = true }
 serde_json = { version = "1.0.21", optional = true }
 neon-serde = { version = "0.0.3", optional = true }
@@ -39,5 +35,10 @@ failure = { version = "0.1.1", optional = true }
 clap = { version = "^2.31.2", optional = true }
 
 [build-dependencies]
-cbindgen = { version = "0.6.0", optional = true }
 neon-build = { version = "0.1.23", optional = true }
+
+[workspace]
+members = [
+        "../../bindings/c",
+        "../../bindings/nodejs"
+]
