--- a/cargo/std/Cargo.toml
+++ b/cargo/std/Cargo.toml
@@ -16,6 +16,11 @@ name = "gutenberg_post_parser"
 crate-type = ["cdylib", "dylib", "lib", "staticlib"]
 path = "../../src/lib.rs"
 
+[[bench]]
+name = "benchmark"
+path = "../../benches/benchmark.rs"
+harness = false
+
 [profile.release]
 debug = false
 lto = true
@@ -26,6 +31,9 @@ default = []
 bin = ["failure", "clap"]
 
 [dependencies]
-nom = { version = "4.0.0" }
+nom = "4.0.0"
 failure = { version = "0.1.1", optional = true }
 clap = { version = "^2.31.2", optional = true }
+
+[dev-dependencies]
+criterion = "0.2"
