--- a/bindings/wasm/Cargo.toml
+++ b/bindings/wasm/Cargo.toml
@@ -11,6 +11,9 @@ name = "gutenberg_post_parser_wasm"
 crate-type = ["cdylib"]
 path = "src/lib.rs"
 
+[profile.release]
+debug = true
+
 [dependencies]
 gutenberg_post_parser = { path = "../../cargo/no_std/", version = "=0.14.0" }
 wee_alloc = { version = "0.4.2" }
