--- a/bindings/c/Cargo.toml
+++ b/bindings/c/Cargo.toml
@@ -15,5 +15,8 @@ path = "src/lib.rs"
 [dependencies]
 gutenberg_post_parser = { path = "../../cargo/std/", version = "=0.14.0" }
 
+[dev-dependencies]
+rayon = "^1.0"
+
 [build-dependencies]
 cbindgen = { version = "0.6.0" }
