--- a/bindings/c/Cargo.toml
+++ b/bindings/c/Cargo.toml
@@ -19,4 +19,4 @@ gutenberg_post_parser = { path = "../../cargo/std/", version = "=0.14.0" }
 rayon = "^1.0"
 
 [build-dependencies]
-cbindgen = { version = "0.6.0" }
+cbindgen = "^0.6.0"
