feat(wasm) Rust is `u8` and JS is `u32`, only.

--- a/bindings/wasm/Cargo.toml
+++ b/bindings/wasm/Cargo.toml
@@ -16,4 +16,4 @@ debug = true
 
 [dependencies]
 gutenberg_post_parser = { path = "../../cargo/no_std/", version = "=0.14.0" }
-wee_alloc = { version = "0.4.2" }
+wee_alloc = "0.4.2"
